tests/baselines/reference/tsxReactEmit6.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    
==== react-consumer.tsx (0 errors) ====
    namespace M {
    	export var React: any;
    }
    
    namespace M {
    	// Should emit M.React.createElement
    	//  and M.React.__spread
    	var foo: any;
    	var spread1 = <div x='' {...foo} y='' />;
    
    	// Quotes
    	var x = <div>This "quote" thing</div>;
    }
    
    